# fastapi-react-template-mini

./: README.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: health.py
backend/app/api/v1/: auth.py
backend/app/core/: config.py  database.py  dependencies.py  exception_handlers.py  health.py  http_clients.py  migrate.py  response.py  security.py
backend/app/middleware/: security_headers.py
backend/app/models/: user.py
backend/app/repositories/: base.py  user_repository.py
backend/app/schemas/: auth.py  common.py
backend/app/templates/email/: confirm_signup.html
backend/migrations/: 001_create_profiles.sql
frontend/: biome.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppSidebar.tsx  DashboardLayout.tsx  ErrorBoundary.tsx  ProtectedRoute.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: avatar.tsx  dropdown-menu.tsx  sidebar.tsx  sonner.tsx  tooltip.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  ForgotPassword.tsx  Login.tsx  NotFound.tsx  Profile.tsx  ResetPassword.tsx  Signup.tsx  VerifyEmail.tsx  dashboard_raw.html
frontend/src/stores/: useAuthStore.ts
