[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=46.0.7",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "fastapi-cli>=0.0.24",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
per-file-ignores = {"app/core/migrate.py" = ["T201"]}

select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, vars)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize syntax)
    "T201",   # ban print() statements
]
ignore = [
    "E501",   # line too long (ruff format handles it)
    "B008",   # function calls in argument defaults (FastAPI uses this)
    "B904",   # allow raising HTTPException without `from e`
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true


